# QHO

./: README.md  index.md  main.py  pyproject.toml  requirements.txt
Heat-Equation/: heat.py  mpl_heat.py
Hyperchaotic-Attractor/: lode.py  main.py
Lyapunov/: lyap.py  utils.py
