[tool.poetry]
name = "qho"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
celluloid = "^0.2.0"
tqdm = "^4.63.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
