[tool.poetry]
name = "qho"
version = "0.1.0"
description = ""
authors = ["derpferpmerp <cmfleming@eths202.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.8.0"
celluloid = "^0.2.0"
tqdm = "^4.63.1"
mpmath = "^1.2.1"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pycairo = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
